testament/tests/shouldfail/texitcode1.nim
discard """
exitcode: 1
target: c
"""
